primeiras atualizações com css

--- a/banda.html
+++ b/banda.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os Caramelows</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 <body>
-         <ul>
+         <ul id="menu">
             <li> <a href="index.html"> A vida antes da fama</a></li>
             <li> <a href="banda.html">Os Caramelows</a></li>
             <li><a href="solo.html">Carreira Solo</a></li>
          </ul>
  
 
-    <h1>Liniker e os Caramelows</h1>
+    <h1 id="t-primeiro">Liniker e os Caramelows</h1>
 
-<img src="https://i.imgur.com/GOUqbWW.jpg">
+<div class="container"> 
+<img src="./assets/liniker_e_os_caramelows.jpg">
+</div>
 
-    <p>Em 2015, grava o EP Cru, com três músicas, acompanhada da banda Os Caramelows. 
+    <p class="center">Em 2015, grava o EP Cru, com três músicas, acompanhada da banda Os Caramelows. 
         Todas as composições são de Liniker. Em outubro, os clipes das músicas são lançados em plataforma de compartilhamento de vídeos e, em apenas cinco dias, alcançam um milhão de visualizações. 
         O vídeo da faixa Zero impulsiona a repercussão. A música valoriza o talento da cantora, que canta em falsete e a cappella na introdução, acompanhada apenas pelos backing vocals.</p>
 
-    <p>As harmonias vocais e o arranjo das canções rendem comparações com Tim Maia (1942-1998):
+    <p class="center">As harmonias vocais e o arranjo das canções rendem comparações com Tim Maia (1942-1998):
         O timbre e a extensão vocal de Liniker, o jeito brasileiro de traduzir as referências da soul music estadunidense e o conteúdo lírico em torno dos mistérios da paixão remetem à obra do cantor e compositor carioca, sobretudo aos trabalhos produzidos nos anos 1970.</p>    
   
-        <h2>EP: REMONTA</h2>
+        <h2 id="t-segundo">EP: REMONTA</h2>
 
-        <p>Em 2016, Liniker e os Caramelows lançam o primeiro LP, Remonta, que inclui as três faixas de Cru. Algumas composições são baseadas em antigas cartas de amor escritas por Liniker. Ela escreve as mensagens inspirada por homens que deseja, porém não as envia. Na faixa título, a primeira do repertório, mais uma vez sua voz ganha destaque nos arranjos: após uma breve introdução de sopros que criam um ambiente de suspense, ela canta sem acompanhamento instrumental. A audição causa impacto e prepara o ouvinte para a experiência que se repete nas outras onze faixas: a técnica apurada no canto, com um timbre facilmente reconhecível e que transita sem dificuldade por diversos tons.</p>
-        <p>O trabalho é marcado por participações de outras cantoras e compositoras, como Xenia França (1986), Tássia Reis (1989) e Tulipa Ruiz (1979). A faixa “BoxOkê” expande a sonoridade da artista e se aproxima do gênero afrobeat, desenvolvido na Nigéria nos anos 1970. A parte instrumental é marcada pela bateria sincopada e a pontuação de metais que caracterizam o ritmo. Na parte vocal, Tássia Reis canta um rap e aumenta o raio de ação da música negra em que Liniker se insere.</p>
-        <p>Entre 2016 e 2018, o trabalho ganha visibilidade fora do Brasil. Liniker faz turnês pela Europa, América Latina, África e Estados Unidos. O público estrangeiro aprecia sua música mesmo sem compreender as letras em português. A representatividade que sua imagem comunica, de uma mulher negra trans bem-sucedida, também contribui para o interesse desse público.</p>
+        <p class="center">Em 2016, Liniker e os Caramelows lançam o primeiro LP, Remonta, que inclui as três faixas de Cru. Algumas composições são baseadas em antigas cartas de amor escritas por Liniker. Ela escreve as mensagens inspirada por homens que deseja, porém não as envia. Na faixa título, a primeira do repertório, mais uma vez sua voz ganha destaque nos arranjos: após uma breve introdução de sopros que criam um ambiente de suspense, ela canta sem acompanhamento instrumental. A audição causa impacto e prepara o ouvinte para a experiência que se repete nas outras onze faixas: a técnica apurada no canto, com um timbre facilmente reconhecível e que transita sem dificuldade por diversos tons.</p>
+        <p class="center">O trabalho é marcado por participações de outras cantoras e compositoras, como Xenia França (1986), Tássia Reis (1989) e Tulipa Ruiz (1979). A faixa “BoxOkê” expande a sonoridade da artista e se aproxima do gênero afrobeat, desenvolvido na Nigéria nos anos 1970. A parte instrumental é marcada pela bateria sincopada e a pontuação de metais que caracterizam o ritmo. Na parte vocal, Tássia Reis canta um rap e aumenta o raio de ação da música negra em que Liniker se insere.</p>
+        <p class="center">Entre 2016 e 2018, o trabalho ganha visibilidade fora do Brasil. Liniker faz turnês pela Europa, América Latina, África e Estados Unidos. O público estrangeiro aprecia sua música mesmo sem compreender as letras em português. A representatividade que sua imagem comunica, de uma mulher negra trans bem-sucedida, também contribui para o interesse desse público.</p>
    
-        <h3>música favorita do ep: remonta.</h3>
+        <h3 id="t-segundo">MÚSICA: SEM NOME MAS COM ENDEREÇO DO EP REMONTA</h3>
 
+        <div class="container">
         <iframe 
         width="560" 
         height="315" 
@@ -39,15 +44,17 @@
         frameborder="5"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
+        </div>
 
-         <h4>GOELA ABAIXO</h4>
+         <h4 id="t-segundo">GOELA ABAIXO</h4>
 
-         <P>Em 2019, lança Goela Abaixo. A primeira faixa, “Brechoque”, repete o recurso de valorizar a voz da cantora sem acompanhamento instrumental. O trabalho agrega elementos da música caribenha e africana. Essa abertura musical se reflete também nos idiomas que ela escolhe para cantar: Goela Abaixo traz versos em inglês (em “Beau”) e espanhol (“Calmô”). A figura da mulher negra trans que se afirma como um “corpo político” em diversas entrevistas assume aspecto mais global e representativo de toda a diáspora negra.</P>
-         <p>Liniker se destaca não apenas pela potência técnica de sua voz (afinada e cheia de nuances), mas também pela representatividade social. Como mulher trans que escreve e canta sobre amor, ela conecta sua obra com um público que raramente se reconhece na música brasileira. Tanto que chegou a ser indicado ao Grammy Latino de Melhor Álbum Pop Contemporâneo em Língua Portuguesa, em 2019.</p>   
-         <p>Com o objetivo dos integrantes de se dedicarem a projetos paralelos, a banda Liniker e os Caramelows anunciou a separação no início de 2020.</p>
+         <P class="center">Em 2019, lança Goela Abaixo. A primeira faixa, “Brechoque”, repete o recurso de valorizar a voz da cantora sem acompanhamento instrumental. O trabalho agrega elementos da música caribenha e africana. Essa abertura musical se reflete também nos idiomas que ela escolhe para cantar: Goela Abaixo traz versos em inglês (em “Beau”) e espanhol (“Calmô”). A figura da mulher negra trans que se afirma como um “corpo político” em diversas entrevistas assume aspecto mais global e representativo de toda a diáspora negra.</P>
+         <p class="center">Liniker se destaca não apenas pela potência técnica de sua voz (afinada e cheia de nuances), mas também pela representatividade social. Como mulher trans que escreve e canta sobre amor, ela conecta sua obra com um público que raramente se reconhece na música brasileira. Tanto que chegou a ser indicado ao Grammy Latino de Melhor Álbum Pop Contemporâneo em Língua Portuguesa, em 2019.</p>   
+         <p class="center">Com o objetivo dos integrantes de se dedicarem a projetos paralelos, a banda Liniker e os Caramelows anunciou a separação no início de 2020.</p>
         
-        <h5>BRECHOQUE</h5>
+        <h5 id="t-segundo">BRECHOQUE</h5>
 
+        <div class="container">
          <iframe 
          width="560" 
          height="315" 
@@ -55,6 +62,7 @@
         frameborder="5" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
-   
+         </div>
+         
         </body>
 </html>
