--- a/index.html
+++ b/index.html
@@ -4,34 +4,42 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Liniker</title>
+   <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 <body>
 
-   <ul>
+    <ul id="menu">
       <li> <a href="index.html"> A vida antes da fama</a></li>
       <li> <a href="banda.html">Os Caramelows</a></li>
       <li><a href="solo.html">Carreira Solo</a></li>
+      
    </ul>
 
-   <h1>A vida de Liniker antes da fama </h1>
+   <h1 id="t-primeiro">A vida de Liniker antes da fama </h1>
 
-<p>Liniker de Barros Ferreira Campos (Araraquara, São Paulo, 1995). Compositora e cantora. 
+ <div class="container"> 
+   <img class="br-50" src="./assets/foto liniker1.jpg">
+   </div>
+
+   <div class="p-30">
+   <p class="center">Liniker de Barros Ferreira Campos (Araraquara, São Paulo, 1995). Compositora e cantora. 
    Com influência de estilos como soul, jazz e samba, destaca-se, a partir de 2015, por sua potência vocal e pelas letras de amor.
    Dona de um timbre grave versátil, também transita naturalmente para o agudo em frequentes falsetes.</p>
    
- <p>Mulher transgênero, sua poesia aborda situações cotidianas da vida afetiva (flerte, sexo, frustração, atração não correspondida) e é acolhida com entusiasmo pela juventude que sofre preconceito contra orientação sexual e identidade de gênero. 
+ <p class="center">Mulher transgênero, sua poesia aborda situações cotidianas da vida afetiva (flerte, sexo, frustração, atração não correspondida) e é acolhida com entusiasmo pela juventude que sofre preconceito contra orientação sexual e identidade de gênero. 
    Liniker faz parte de uma geração de artistas populares da música brasileira assumidamente trans, como a banda As Bahias e a Cozinha Mineira e a cantora Linn da Quebrada (1990).
    A negritude é tema de destaque em seus trabalhos, nos quais combina referências diversas da música negra.</p>
    
-   <p>Na infância, é criada pela mãe, que dá aulas de samba-rock e lhe ensina alguns movimentos. 
+   <p class="center">Na infância, é criada pela mãe, que dá aulas de samba-rock e lhe ensina alguns movimentos. 
     A atividade da mãe e o contato com os tios compositores de samba são influências que carrega quando começa a compor anos mais tarde.</p>
    
-    <p>Por sugestão de amigos, cursa a Escola Livre de Teatro de Santo André, em 2014. Lá, divide quarto e se aproxima da cantora e compositora Linn da Quebrada, que a incentiva a se reconhecer como trans. 
+    <p class="center">Por sugestão de amigos, cursa a Escola Livre de Teatro de Santo André, em 2014. Lá, divide quarto e se aproxima da cantora e compositora Linn da Quebrada, que a incentiva a se reconhecer como trans. 
      Aos poucos, Liniker assume o visual pelo qual ficou conhecida: saia, batom e turbante.</p>
 
-   <p>Começa a compor aos 16 anos e se declara influenciada por Paula Lima (1971), Clube do Balanço, Originais do Samba e pelas cantoras estadunidenses Etta James (1938-2012) e Nina Simone (1933-2003).</p>
-
-   <img src="https://i.imgur.com/iPcaVKu.jpg">
+   <p class="center">Começa a compor aos 16 anos e se declara influenciada por Paula Lima (1971), Clube do Balanço, Originais do Samba e pelas cantoras estadunidenses Etta James (1938-2012) e Nina Simone (1933-2003).</p>
+</div>
+ 
 
 
 
